meteoplatform/04-kubernetes/manifests/routing/analysis-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: analysis-route
  namespace: group-6
  labels:
    app: analysis-service
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-gateway
    namespace: default
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /group-6/analysis
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - group: ''
      kind: Service
      name: analysis-service
      port: 8000
      weight: 1
