meteoplatform/04-kubernetes/manifests/routing/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: group-6
  labels:
    app: frontend
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-gateway
    namespace: default
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /group-6
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - group: ''
      kind: Service
      name: frontend
      port: 3000
      weight: 1
