meteoplatform/04-kubernetes/manifests/routing/meteo-core-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meteo-core-route
  namespace: group-6
  labels:
    app: meteo-core
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-gateway
    namespace: default
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /group-6/core
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - group: ''
      kind: Service
      name: meteo-core
      port: 8080
      weight: 1
